// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`uploadcare > gets all urls from docs config 1`] = `
[
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/introduction/intro",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/introduction/start/quickstart",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/introduction/security",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/introduction/billing",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/uploading/uploads",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/uploading/uploading-files",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/uploading/file-uploader/file-uploader",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/optimization/image-optimization",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/image-transformations/overview",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/delivery/overview",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/file-management/overview",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/integrations/all-integrations",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/integrations/api-clients/python",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/base-upload",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/multipart-file-upload-start",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/multipart-file-upload-part",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/multipart-file-upload-complete",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/from-url-upload",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/from-url-upload-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/file-upload-info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/groups/create-files-group",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/groups/files-group-info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file-metadata",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/files-list",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/store-file",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/delete-file-storage",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/files-storing",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/files-delete",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/create-local-copy",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/create-remote-copy",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/aws-rekognition-execute",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/aws-rekognition-execution-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/aws-rekognition-detect-moderation-labels-execute",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/aws-rekognition-detect-moderation-labels-execution-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/uc-clamav-virus-scan-execute",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/uc-clamav-virus-scan-execution-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/remove-bg-execute",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/remove-bg-execution-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file-metadata/key",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file-metadata/update-file-metadata-key",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file-metadata/delete-file-metadata-key",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/group/groups-list",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/group/info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/group/delete-group",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/project/info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/webhook/webhooks-list",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/webhook/create",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/webhook/update-webhook",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/webhook/unsubscribe",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion/document-convert-info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion/document-convert",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion/document-convert-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion/video-convert",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion/video-convert-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/url-api/file-information/file-info-json",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/url-api/file-information/file-info-jsonp",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/url-api/file-names/file-with-name",
]
`;

exports[`uploadcare > gets navigation root for /api/url-api 1`] = `
{
  "redirect": "api/url-api/file-information/file-info-json",
  "type": "redirect",
}
`;

exports[`uploadcare > gets navigation root for /docs 1`] = `
{
  "redirect": "docs/introduction/intro",
  "type": "redirect",
}
`;

exports[`uploadcare > gets navigation root for /docs/file-management 1`] = `
{
  "redirect": "docs/file-management/overview",
  "type": "redirect",
}
`;

exports[`uploadcare > gets navigation root for /docs/file-management/overview 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.docs.docs.file-management.overview",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "pages/start/file-management.mdx",
  "slug": "docs/file-management/overview",
  "title": "Overview",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`uploadcare > gets navigation root for /docs/file-management/overview 2`] = `undefined`;

exports[`uploadcare > gets navigation root for /docs/file-management/overview 3`] = `"docs"`;

exports[`uploadcare > gets navigation root for /docs/integrations 1`] = `
{
  "redirect": "docs/integrations/all-integrations",
  "type": "redirect",
}
`;

exports[`uploadcare > gets navigation root for /docs/introduction 1`] = `
{
  "redirect": "docs/introduction/intro",
  "type": "redirect",
}
`;

exports[`uploadcare > gets navigation root for /docs/introduction/intro 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": undefined,
  "icon": undefined,
  "id": "root.uv.docs.docs.introduction.intro",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "pages/index.mdx",
  "slug": "docs/introduction/intro",
  "title": "Overview",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`uploadcare > gets navigation root for /docs/introduction/intro 2`] = `undefined`;

exports[`uploadcare > gets navigation root for /docs/introduction/intro 3`] = `"docs"`;
